build/log/idf_py_stdout_output_11300
[1/15] Linking C static library esp-idf\esp_local_ctrl\libesp_local_ctrl.a
[2/15] Linking C static library esp-idf\fatfs\libfatfs.a
[3/15] Linking C static library esp-idf\thingsboard\libthingsboard.a
[4/15] Linking C static library esp-idf\wifi_provisioning\libwifi_provisioning.a
[5/15] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\Espressif\frameworks\air_sense\build\bootloader\esp-idf\esptool_py && D:\Espressif.\python_env\idf5.1_py3.11_env\Scripts\python.exe D:/Espressif/frameworks/esp-idf-v5.1.4/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Espressif/frameworks/air_sense/build/bootloader/bootloader.bin"
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[6/13] Building C object esp-idf/wifi/CMakeFiles/__idf_wifi.dir/wifi.c.obj
FAILED: esp-idf/wifi/CMakeFiles/__idf_wifi.dir/wifi.c.obj 
ccache D:\Espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1.4-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Espressif/frameworks/air_sense/build/config -ID:/Espressif/frameworks/air_sense/component/wifi -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/newlib/platform_include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/freertos/FreeRTOS-Kernel/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/freertos/esp_additions/include/freertos -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/freertos/esp_additions/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/freertos/esp_additions/arch/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_hw_support/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_hw_support/include/soc -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_hw_support/include/soc/esp32 -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_hw_support/port/esp32/. -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/heap/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/log/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/soc/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/soc/esp32 -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/soc/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/hal/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/hal/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/hal/platform_port/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_rom/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_rom/include/esp32 -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_rom/esp32 -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_common/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_system/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_system/port/soc -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_system/port/include/private -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/xtensa/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/include/apps -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/include/apps/sntp -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/lwip/src/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/port/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/port/freertos/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/port/esp32xx/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/lwip/port/esp32xx/include/arch -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/deprecated -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/analog_comparator/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/dac/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/gpio/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/gptimer/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/i2c/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/i2s/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/ledc/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/mcpwm/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/parlio/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/pcnt/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/rmt/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/sdio_slave/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/sdmmc/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/sigma_delta/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/spi/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/temperature_sensor/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/touch_sensor/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/twai/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/uart/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/usb_serial_jtag/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/driver/touch_sensor/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_pm/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_ringbuf/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_wifi/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_wifi/wifi_apps/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_event/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_phy/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_phy/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_netif/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/nvs_flash/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/esp_partition/include -ID:/Espressif/frameworks/esp-idf-v5.1.4/components/spi_flash/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/Espressif/frameworks/air_sense=. -fmacro-prefix-map=D:/Espressif/frameworks/esp-idf-v5.1.4=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/wifi/CMakeFiles/__idf_wifi.dir/wifi.c.obj -MF esp-idf\wifi\CMakeFiles\__idf_wifi.dir\wifi.c.obj.d -o esp-idf/wifi/CMakeFiles/__idf_wifi.dir/wifi.c.obj -c D:/Espressif/frameworks/air_sense/component/wifi/wifi.c
D:/Espressif/frameworks/air_sense/component/wifi/wifi.c: In function 'wifi_init_sta':
D:/Espressif/frameworks/air_sense/component/wifi/wifi.c:4:14: error: 'CONFIG_PASSWORD' undeclared (first use in this function); did you mean 'CONFIG_PASS'?
    4 | #define PASS CONFIG_PASSWORD
      |              ^~~~~~~~~~~~~~~
D:/Espressif/frameworks/air_sense/component/wifi/wifi.c:32:25: note: in expansion of macro 'PASS'
   32 |             .password = PASS,
      |                         ^~~~
D:/Espressif/frameworks/air_sense/component/wifi/wifi.c:4:14: note: each undeclared identifier is reported only once for each function it appears in
    4 | #define PASS CONFIG_PASSWORD
      |              ^~~~~~~~~~~~~~~
D:/Espressif/frameworks/air_sense/component/wifi/wifi.c:32:25: note: in expansion of macro 'PASS'
   32 |             .password = PASS,
      |                         ^~~~
ninja: build stopped: subcommand failed.
